# wolfram_model

./: .gitignore  CMakeLists.txt  README.md  azure-pipelines.yml  deploy_macos_one_python.sh  requirements-dev.txt
cmake/: wolfram_modelConfig.cmake.in
deploy/: Dockerfile-dockcross-manylinux2010  Dockerfile-dockcross-manylinux2014  deploy_linux.sh  deploy_macos_one_python.sh  deploy_windows_one_python.sh  download_azure_artifacts.sh  increase_version.py  manylinux-build-wheels.sh  setup.py  wolfram_model_version.py
libSetReplace/: SetReplaceIO.hpp
libSetReplace/test/: CMakeLists.txt  test_SetReplace.cpp
python/: CMakeLists.txt  __init__.py  wolfram_model_init_py.cpp
python/set_replace/: CMakeLists.txt  expression_py.cpp  match_py.cpp  rule_py.cpp  set_py.cpp  set_replace_common_py.hpp  set_replace_init_py.cpp
python/set_replace/tests/: CMakeLists.txt  test_set.py
python/tests/: CMakeLists.txt
python/tests/set_replace/: test_expressions.py  test_match.py  test_rule.py
python/tests/vis/: CMakeLists.txt  test_vis.py
python/vis/: __init__.py  fixture.py  vis.py
python/vis/networkx/: vis.py
